# TheParlament

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  config.toml  guardrails_config.py  guardrails_example.py  main.py  parlament_agent.py  parliament_agent.py  pyproject.toml  requirements.txt
app/: GUARDRAILS_GUIDE.md  __init__.py  app.py  config.toml  google_video_example.py  guardrails_config.py  main.py  parliament_agent_open_ai_sdk.py  the_parliement_service.py
mcp/: the_parliement_service.py
output_scripts/: hebrew_output.txt  original_script.txt
tests/: guardrails_sample.py  test_content_safety.py  test_guards.py  test_mcp_server.py  test_myguardrails_agent.py
